fix spacing

--- a/public/main.css
+++ b/public/main.css
@@ -56,6 +56,7 @@ h5 {
   font-weight: 600;
   margin: 0;
   font-size: 0.9rem;
+  line-height: 1.5;
 }
 
 p {
